--- a/ss7_router_and_service/practice/angular-product-management/package.json
+++ b/ss7_router_and_service/practice/angular-product-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "re-furama-management",
+  "name": "angular-product-management",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,7 +20,6 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "bootstrap": "^5.1.3",
-    "json-server": "^0.17.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
