--- a/ss7_router_and_service/exercise1/angular.json
+++ b/ss7_router_and_service/exercise1/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "exercise1": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "exercise1"
+    }
+  },
+  "defaultProject": "exercise1",
+  "cli": {
+    "analytics": "323a95fa-759f-4b4a-adef-43c6e6b3ba34"
+  }
 }
